Scrollbar backgroud fix

--- a/src/App.css
+++ b/src/App.css
@@ -133,16 +133,6 @@ p {
   display: grid;
 }
 
-.progress-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 10px;
-  background: var(--github);
-  transform-origin: 0%;
-}
-
 /* Global CSS End */
 
 h1 {
