--- a/src/Pages/Home/Navbar/navbar.css
+++ b/src/Pages/Home/Navbar/navbar.css
@@ -6,10 +6,10 @@
    background: var(--background);
    /* box-shadow: 0px 5.333px 80px 0 rgba(0, 0, 0, 0.1); */
    position: fixed;
-   top: 10px;
+   top: 0px;
    left: 0;
    right: 0;
-   height: 50px;
+   height: 60px;
 }
 
 .navbar--items>ul {
