--- a/src/Pages/Home/Portfolio/portfolio.css
+++ b/src/Pages/Home/Portfolio/portfolio.css
@@ -1,7 +1,7 @@
 /* Portfolio */
 .portfolio--section {
    display: flex;
-   padding: 112px 85px;
+   max-width: 1400px;
    flex-direction: column;
    align-items: flex-start;
    gap: 80px;
